Fix: UserContent - `about:preferences` Adjust item spacing #952

--- a/css/leptonContent.css
+++ b/css/leptonContent.css
@@ -2251,6 +2251,14 @@
       background-color: var(--in-content-box-background-odd);
     }
   }
+  @-moz-document url-prefix("about:preferences") {
+    .privacy-extra-information > .custom-option:not(:first-child) {
+      margin-block: 2px !important; /* Original: 10px */
+    }
+    .extra-information-label:not(:first-child) {
+      margin-top: 4px !important; /* Original: 19px */
+    }
+  }
   /*= about:processes ==========================================================*/
   @-moz-document url-prefix("about:processes") {
     td.type.favicon[style*='background-image: url("chrome://global/skin/icons/link.svg");']
@@ -5975,6 +5983,16 @@
       > richlistitem:nth-child(even):not([selected="true"], :hover),
     #translations-manage-install-list > .translations-manage-language:nth-child(even):not([selected="true"], :hover) {
       background-color: var(--in-content-box-background-odd);
+    }
+  }
+}
+@media (-moz-bool-pref: "userContent.page.proton") {
+  @-moz-document url-prefix("about:preferences") {
+    .privacy-extra-information > .custom-option:not(:first-child) {
+      margin-block: 2px !important; /* Original: 10px */
+    }
+    .extra-information-label:not(:first-child) {
+      margin-top: 4px !important; /* Original: 19px */
     }
   }
 }
